# stm32template

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: local.cmake.sample
cmake/modules/: cubemx.cmake  utils.cmake  variants.cmake
cmake/toolchains/: stm32-g4.cmake
docker/: Dockerfile  build.sh  entrypoint.sh
docs/: 01-installation.md  02-utilisation.md  03-architecture.md  04-ajouter-une-cible.md  05-faq.md  README.md
src/: main.c
src/bsp/template_g431/: template_g431.ioc
